@@ -121,6 +121,7 @@ We'll add it back when project opening functionality is working.
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                         --add-exports javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+                        --add-exports javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                         --add-exports javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
                         --add-exports javafx.web/com.sun.webkit=ALL-UNNAMED
                         --add-exports org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
@@ -135,6 +136,7 @@ We'll add it back when project opening functionality is working.
                         --add-opens javafx.base/javafx.collections=ALL-UNNAMED
                         --add-opens javafx.base/javafx.beans=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
                         --add-opens javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED
                         --add-opens javafx.web/com.sun.webkit=ALL-UNNAMED
                         --add-opens org.fxmisc.richtext/org.fxmisc.richtext=ALL-UNNAMED
@@ -209,6 +211,8 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
@@ -228,6 +232,8 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.base/javafx.beans=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-opens</option>
@@ -281,6 +287,8 @@ We'll add it back when project opening functionality is working.
                         <option>--add-exports</option>
                         <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
                         <option>--add-exports</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-exports</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-exports</option>
                         <option>javafx.web/com.sun.webkit=ALL-UNNAMED</option>
@@ -300,6 +308,8 @@ We'll add it back when project opening functionality is working.
                         <option>javafx.base/javafx.beans=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
                         <option>--add-opens</option>
                         <option>javafx.web/com.sun.javafx.sg.prism.web=ALL-UNNAMED</option>
                         <option>--add-opens</option>
